syntax = "proto3";
package model;
import "github.com/ronaksoft/rony/options.proto";
option go_package = "github.com/ronaksoft/dclock/model";
option (rony_storage) = "local";


message Hook {
    option (rony_model) = true;
    option (rony_table) = "(ClientID, ID)";
    option (rony_view) = "(CallbackUrl, ID)";
    bytes ClientID = 1;
    bytes ID = 2;
    int64 Timestamp = 3; // UTC unix epoch time
    bytes CallbackUrl = 4;
    bytes JsonData = 5;
    bool Fired = 6;
    bool Success = 7;
}

message HookHolder {
    option (rony_model) = true;
    option (rony_table) = "(ClientID, ID)";
    bytes ClientID = 1;
    bytes ID = 2;
    Hook Hook = 3;
}