syntax = "proto3";
package service;
import "github.com/ronaksoft/rony/options.proto";
import "model/page.proto";
option go_package = "github.com/ronaksoft/dclock/service";

service Roster {
    option (rony_cobra_cmd) = true;
    rpc PageGet (PageGetRequest) returns (model.Page) {
        option (rony_internal) = true;
    };
    rpc PageSet (PageSetRequest) returns (model.Page) {
        option (rony_internal) = true;
    };
    rpc PageList (PageListRequest) returns (PagesMany);
}

message PageSetRequest {
    uint32 Page = 1;
    uint64 ReplicaSet = 2;
    bool Replace = 3;
}

message PageGetRequest {
    uint32 Page = 1;
    uint64 ReplicaSet = 2;
    bool CreateNew = 3;
}

message PageListRequest {
    uint64 ReplicaSet = 1;
}

message PagesMany {
    repeated model.Page Pages = 1;
}